load("@build_bazel_rules_apple//apple:apple.bzl", "apple_static_xcframework", "apple_xcframework", "local_provisioning_profile")
load("@build_bazel_rules_apple//apple:ios.bzl", "ios_application", "ios_framework")
load("@build_bazel_rules_apple//apple:resources.bzl", "apple_resource_bundle")
load("//bazel:flags.bzl", "CPP_FLAGS", "MAPLIBRE_FLAGS", "WARNING_FLAGS")
load(
    "@rules_xcodeproj//xcodeproj:defs.bzl",
    "top_level_target",
    "xcode_provisioning_profile",
    "xcodeproj",
    "xcode_schemes",
)
load("bazel/macros.bzl", "info_plist")
load("bazel/config.bzl", "APPLE_MOBILE_PROVISIONING_PROFILE_TEAM_ID")
load("bazel/files.bzl",
    "MLN_IOS_PUBLIC_SOURCE",
    "MLN_IOS_PUBLIC_HEADERS",
    "MLN_IOS_PRIVATE_HEADERS",
    "MLN_IOS_PUBLIC_OBJC_SOURCE",
    "MLN_DARWIN_INCLUDES",
)

_PUBLIC_HDRS = [
    "src/MLNAnnotationContainerView.h",
    "src/MLNAnnotationImage.h",
    "src/MLNAnnotationView.h",
    "src/MLNCalloutView.h",
    "src/MLNCameraChangeReason.h",
    "src/MLNCompactCalloutView.h",
    "src/MLNCompassButton.h",
    "src/MLNFaux3DUserLocationAnnotationView.h",
    "src/MLNMapAccessibilityElement.h",
    "src/MLNMapProjection.h",
    "src/MLNMapView+IBAdditions.h",
    "src/MLNMapView+Impl.h",
    "src/MLNMapView+OpenGL.h",
    "src/MLNMapView.h",
    "src/MLNMapViewDelegate.h",
    "src/MLNScaleBar.h",
    "src/MLNUserLocation.h",
    "src/MLNUserLocationAnnotationView.h",
    "src/MLNUserLocationAnnotationViewStyle.h",
    "src/MLNUserLocationHeadingArrowLayer.h",
    "src/MLNUserLocationHeadingBeamLayer.h",
    "src/MLNUserLocationHeadingIndicator.h",
    "src/Mapbox.h",
    "src/NSOrthography+MLNAdditions.h",
    "src/UIColor+MLNAdditions.h",
    "src/UIDevice+MLNAdditions.h",
    "src/UIImage+MLNAdditions.h",
    "src/UIView+MLNAdditions.h",
    "src/UIViewController+MLNAdditions.h",
]

_PRIVATE_HDRS = [
    "src/MLNAnnotationContainerView_Private.h",
    "src/MLNAnnotationImage_Private.h",
    "src/MLNAnnotationView_Private.h",
    "src/MLNCompassButton_Private.h",
    "src/MLNMapView_Private.h",
    "src/MLNUserLocationAnnotationView_Private.h",
    "src/MLNUserLocation_Private.h",
]

_OBJCPP_SRCS = [
    "src/MLNAnnotationView.mm",
    "src/MLNCompassButton.mm",
    "src/MLNFaux3DUserLocationAnnotationView.mm",
    "src/MLNMapAccessibilityElement.mm",
    "src/MLNMapProjection.mm",
    "src/MLNMapView.mm",
    "src/MLNMapView+Impl.mm",
    "src/MLNMapView+OpenGL.mm",
    "src/MLNScaleBar.mm",
    "src/UIColor+MLNAdditions.mm",
    "src/UIImage+MLNAdditions.mm",
]

_OBJC_SRCS = [
    "src/MLNAnnotationContainerView.m",
    "src/MLNAnnotationImage.m",
    "src/MLNCompactCalloutView.m",
    "src/MLNUserLocation.m",
    "src/MLNUserLocationAnnotationView.m",
    "src/MLNUserLocationAnnotationViewStyle.m",
    "src/MLNUserLocationHeadingArrowLayer.m",
    "src/MLNUserLocationHeadingBeamLayer.m",
    "src/NSOrthography+MLNAdditions.m",
    "src/UIDevice+MLNAdditions.m",
    "src/UIView+MLNAdditions.m",
    "src/UIViewController+MLNAdditions.m",
]

_APP_SRCS = [
    "app/MBXAnnotationView.m",
    "app/MBXAppDelegate.m",
    "app/MBXCustomCalloutView.h",
    "app/MBXCustomCalloutView.m",
    "app/MBXCustomLocationViewController.m",
    "app/MBXEmbeddedMapViewController.m",
    "app/MBXFrameTimeGraphView.m",
    "app/MBXOfflinePacksTableViewController.m",
    "app/MBXOrnamentsViewController.m",
    "app/MBXSnapshotsViewController.m",
    "app/MBXState.m",
    "app/MBXStateManager.m",
    "app/MBXUserLocationAnnotationView.m",
    "app/MBXViewController.m",
    "app/main.m",

    "app/MBXAnnotationView.h",
    "app/MBXAppDelegate.h",
    "app/MBXCustomLocationViewController.h",
    "app/MBXEmbeddedMapViewController.h",
    "app/MBXFrameTimeGraphView.h",
    "app/MBXOfflinePacksTableViewController.h",
    "app/MBXOrnamentsViewController.h",
    "app/MBXSnapshotsViewController.h",
    "app/MBXState.h",
    "app/MBXStateManager.h",
    "app/MBXUserLocationAnnotationView.h",
    "app/MBXViewController.h",
    "app/MLNMapView_Experimental.h",
]

filegroup(
    name = "ios_public_hdrs",
    visibility = ["//visibility:public"],
    srcs = _PUBLIC_HDRS,
)

filegroup(
    name = "ios_private_hdrs",
    visibility = ["//visibility:public"],
    srcs = _PRIVATE_HDRS,
)

filegroup(
    name = "ios_objcpp_srcs",
    visibility = ["//visibility:public"],
    srcs = _OBJCPP_SRCS,
)

filegroup(
    name = "ios_objc_srcs",
    visibility = ["//visibility:public"],
    srcs = _OBJC_SRCS,
)

filegroup(
    name = "ios_app_srcs",
    visibility = ["//visibility:public"],
    srcs = _APP_SRCS,
)


apple_static_xcframework(
    name = "Mapbox.static",
    bundle_name = "Mapbox",
    ios = {
        "simulator": [
            "x86_64",
            "arm64",
        ],
        "device": ["arm64"],
    },
    minimum_os_versions = {"ios": "12.0"},
    public_hdrs = MLN_IOS_PUBLIC_SOURCE,
    umbrella_header = "src/Mapbox.h",
    visibility = ["//visibility:public"],
    deps = ["//platform:ios-sdk"],
)

info_plist(
    name = "info_plist",
    out = "Info.plist",
    base_info_plist = "framework/Info.plist",
)

info_plist(
    name = "info_static_plist",
    out = "Info-static.plist",
    base_info_plist = "framework/Info-static.plist",
)

apple_xcframework(
    name = "Mapbox.dynamic",
    bundle_id = "com.maplibre.mapbox",
    bundle_name = "Mapbox",
    data = glob([
        "resources/*.lproj/**",
        "resources/*.xcassets/**",
    ]),
    infoplists = ["info_plist"],
    ios = {
        "simulator": [
            "x86_64",
            "arm64",
        ],
        "device": ["arm64"],
    },
    minimum_os_versions = {"ios": "12.0"},
    public_hdrs = MLN_IOS_PUBLIC_SOURCE,
    umbrella_header = "src/Mapbox.h",
    visibility = ["//visibility:public"],
    deps = ["//platform:ios-sdk-dynamic"],
)

ios_framework(
    name = "MapLibre.link",
    bundle_id = "com.maplibre.link",
    families = ["iphone"],
    infoplists = ["info_plist"],
    linkopts = [""],
    minimum_os_version = "12.0",
    deps = ["//platform:ios-sdk"],
)

apple_resource_bundle(
    name = "resources",
    bundle_id = "com.maplibre.mapbox",
    bundle_name = "Mapbox",
    infoplists = ["info_static_plist"],
    visibility = ["//visibility:public"],
    resources = glob([
        "resources/*.lproj/**",
        "resources/*.xcassets/**",
    ]),
)

_IOS_APPLICATION_RESOURCES = [
    "app/numeric_filter_style.json",
    "app/missing_icon.json",
    "app/points.geojson",
    "app/polyline.geojson",
    "app/Settings.bundle",
    "app/Main.storyboard",
    "app/threestates.geojson",
    "app/LaunchScreen.storyboard",
    "app/simple_route.json",
    "app/fill_filter_style.json",
    "//platform/darwin:test/amsterdam.geojson",
] + glob([
    "app/*.lproj/**",
])

ios_application(
    name = "App",
    bundle_id = "org.maplibre.app",
    families = [
        "iphone",
        "ipad",
    ],
    infoplists = ["build/Info-app.plist"],
    minimum_os_version = "12.0",
    #provisioning_profile = "xcode_profile",
    resources = _IOS_APPLICATION_RESOURCES,
    visibility = ["//visibility:public"],
    deps = [
        "//platform:iosapp",
    ],
)

ios_application(
    name = "AppDynamicLib",
    bundle_id = "org.maplibre.app",
    families = [
        "iphone",
        "ipad",
    ],
    frameworks = [
        "MapLibre.link",
    ],
    infoplists = ["app/Info.plist"],
    minimum_os_version = "12.0",
    resources = _IOS_APPLICATION_RESOURCES,
    visibility = ["//visibility:public"],
    #provisioning_profile = ":xcode_profile",
    deps = [
        "//platform:iosapp",
    ],
)

# Outputs a file with the size of MapLibre as a dynamic library in bytes
genrule(
    name = "size",
    srcs = [
        "AppDynamicLib",
    ],
    outs = [
        "size-out",
    ],
    cmd = """
        unzip $(location AppDynamicLib)
        stat -f%z ./Payload/AppDynamicLib.app/Frameworks/MapLibre.link.framework/MapLibre.link > $@
    """,
)

local_provisioning_profile(
    name = "provisioning_profile",
    profile_name = "iOS Team Provisioning Profile: *",
    team_id = APPLE_MOBILE_PROVISIONING_PROFILE_TEAM_ID,
)

xcode_provisioning_profile(
    name = "xcode_profile",
    managed_by_xcode = True,
    provisioning_profile = ":provisioning_profile",
    visibility = ["//visibility:public"],
)

xcodeproj(
    name = "xcodeproj",
    build_mode = "xcode",
    minimum_xcode_version = "14",
    project_name = "MapLibre",
    tags = ["manual"],
    bazel_env = {"PATH": "/bin:/usr/bin:/usr/local/bin:/opt/homebrew/bin"},
    default_xcode_configuration = "Debug",
    xcode_configurations = {
        "Debug": {"//command_line_option:compilation_mode": "dbg"},
        "Release": {"//command_line_option:compilation_mode": "opt"}
    },
    top_level_targets = [
        top_level_target(
            "App",
            target_environments = [
                "simulator",
                "device",
            ],
        ),
        #top_level_target(
        #    "//render-test/ios:RenderTest",
        #    target_environments = [
        #        "simulator",
        #        "device",
        #    ],
        #),
       # "//platform/ios/test:ios_test",
       # "//platform/ios/iosapp-UITests:uitest",
    ],
)


exports_files(_PUBLIC_HDRS
    + _PRIVATE_HDRS
    + _OBJCPP_SRCS
    + _OBJC_SRCS
    + _APP_SRCS
)